<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_of_people"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="3dp"
        android:background="#e0ffdd"
        android:gravity="center"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:textSize="21sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/btn_go"
        app:layout_constraintStart_toStartOf="@+id/bill_total_with_tax"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/overage"
        android:textAlignment="viewStart"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/bill_total_with_tax"
        android:textAlignment="viewStart"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/bill_total_with_tax"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="38dp"
        android:gravity="center"
        android:text="@string/number_of_people"
        android:textAlignment="viewStart"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/total_per_person"
        android:textAlignment="viewStart"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tip_amount"
        android:textAlignment="viewStart"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/total_with_tip"
        android:textAlignment="viewStart"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tip_percentage"
        android:textAlignment="viewStart"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/bill_total_with_tax"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="#e0ffdd"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textAlignment="viewEnd"
        android:textSize="21sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toEndOf="@+id/textView"
        tools:ignore="RtlCompat"
        tools:text="56.4" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/rb12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="doPercentage"
            android:text="@string/rb_12"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="doPercentage"
            android:text="@string/rb_15"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="doPercentage"
            android:text="@string/rb_18"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="doPercentage"
            android:text="@string/rb_20"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_go"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:onClick="doCalculate"
        android:text="@string/go"
        app:layout_constraintEnd_toEndOf="@+id/total_with_tip"
        app:layout_constraintStart_toEndOf="@+id/number_of_people"
        app:layout_constraintTop_toBottomOf="@+id/total_with_tip"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="doClear"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/tip_amount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="64dp"
        android:background="#dedee0"
        android:gravity="center"
        android:textAlignment="viewEnd"
        android:textSize="21sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/bill_total_with_tax"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        tools:ignore="RtlCompat"
        tools:text="32.32" />

    <TextView
        android:id="@+id/total_with_tip"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#dedee0"
        android:gravity="center"
        android:textAlignment="viewEnd"
        android:textSize="21sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/tip_amount"
        app:layout_constraintStart_toStartOf="@+id/tip_amount"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/total_per_person"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:background="#dedee0"
        android:gravity="center"
        android:textAlignment="viewEnd"
        android:textSize="21sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/bill_total_with_tax"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bill_total_with_tax"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/overage"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="#dedee0"
        android:ems="10"
        android:gravity="center"
        android:textAlignment="viewEnd"
        android:textSize="21sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/total_per_person"
        app:layout_constraintStart_toStartOf="@+id/total_per_person"
        tools:ignore="RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>